--- a/index.html
+++ b/index.html
@@ -38,13 +38,21 @@
         <address class="header-address">
           <ul class="header-address-list">
             <li class="address-list-item">
-              <a href="mailto:info@devstudio.com" class="contacts-header"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com" class="contacts-header">
+                <svg class="header-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use>
+                </svg>
+
+                info@devstudio.com</a
               >
             </li>
             <li class="address-list-item">
-              <a href="tel:+380961111111" class="contacts-header"
-                >+38 096 111 11 11</a
+              <a href="tel:+380961111111" class="contacts-header">
+                <svg class="header-icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -54,7 +62,7 @@
 
     <main>
       <!-- Герой -->
-      <section class="hero">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="color-button hero-button">
@@ -69,6 +77,11 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Внимание к деталям</h3>
               <p class="advantage-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -77,6 +90,11 @@
             </li>
 
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Пунктуальность</h3>
               <p class="advantage-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -85,6 +103,11 @@
             </li>
 
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Планирование</h3>
               <p class="advantage-text">
                 Равным образом консультация с широким активом в значительной
@@ -93,6 +116,11 @@
             </li>
 
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Современные технологии</h3>
               <p class="advantage-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -156,6 +184,46 @@
               <div class="person-description">
                 <h3 class="card-title">Игорь Демьяненко</h3>
                 <p class="position">Product Designer</p>
+
+                <ul class="team-icons-container">
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -169,6 +237,46 @@
               <div class="person-description">
                 <h3 class="card-title">Ольга Репина</h3>
                 <p class="position">Frontend Developer</p>
+
+                <ul class="team-icons-container">
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -182,6 +290,46 @@
               <div class="person-description">
                 <h3 class="card-title">Николай Тарасов</h3>
                 <p class="position">Marketing</p>
+
+                <ul class="team-icons-container">
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -195,7 +343,103 @@
               <div class="person-description">
                 <h3 class="card-title">Михаил Ермаков</h3>
                 <p class="position">UI Designer</p>
+
+                <ul class="team-icons-container">
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-icons-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Постоянные клиенты -->
+      <section class="regular-customers-section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="customers-list">
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="44.27" height="49.23">
+                  <use href="./images/symbol-defs.svg#icon-company-1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="40" height="52">
+                  <use href="./images/symbol-defs.svg#icon-company-2"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="41" height="42.6">
+                  <use href="./images/symbol-defs.svg#icon-company-3"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="79.66" height="42.02">
+                  <use href="./images/symbol-defs.svg#icon-company-4"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="59" height="47">
+                  <use href="./images/symbol-defs.svg#icon-company-5"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="88.48" height="45.44">
+                  <use href="./images/symbol-defs.svg#icon-company-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -204,27 +448,66 @@
 
     <!-- Footer -->
     <footer class="main-footer">
-      <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
-        >
-        <address>
-          <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="footer-contacts-list">
-            <li class="contacts-list-item">
-              <a href="mailto:info@example.com" class="contacts-footer"
-                >info@example.com</a
-              >
+      <div class="container footer-flex-container">
+        <div class="footer-address-wrapper">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></a
+          >
+          <address>
+            <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-contacts-list">
+              <li class="contacts-list-item">
+                <a href="mailto:info@example.com" class="contacts-footer"
+                  >info@example.com</a
+                >
+              </li>
+
+              <li class="contacts-list-item">
+                <a href="tel:+380991111111" class="contacts-footer"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-join-wrapper">
+          <p class="join-text">Присоединяйтесь</p>
+          <ul class="join-icons-list">
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
 
-            <li class="contacts-list-item">
-              <a href="tel:+380991111111" class="contacts-footer"
-                >+38 099 111 11 11</a
-              >
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
