--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,11 @@
             <li class="navigation-item">
               <a href="./index.html" class="navigation-link">Студия</a>
             </li>
-
             <li class="navigation-item">
               <a href="portfolio.html" class="navigation-link current-link"
                 >Портфолио</a
               >
             </li>
-
             <li class="navigation-item">
               <a href="" class="navigation-link">Контакты</a>
             </li>
@@ -40,13 +38,21 @@
         <address class="header-address">
           <ul class="header-address-list">
             <li class="address-list-item">
-              <a href="mailto:info@devstudio.com" class="contacts-header"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com" class="contacts-header">
+                <svg class="header-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use>
+                </svg>
+
+                info@devstudio.com</a
               >
             </li>
             <li class="address-list-item">
-              <a href="tel:+380961111111" class="contacts-header"
-                >+38 096 111 11 11</a
+              <a href="tel:+380961111111" class="contacts-header">
+                <svg class="header-icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -181,27 +187,66 @@
 
     <!-- Footer -->
     <footer class="main-footer">
-      <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
-        >
-        <address>
-          <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="footer-contacts-list">
-            <li class="contacts-list-item">
-              <a href="mailto:info@example.com" class="contacts-footer"
-                >info@example.com</a
-              >
+      <div class="container footer-flex-container">
+        <div class="footer-address-wrapper">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></a
+          >
+          <address>
+            <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-contacts-list">
+              <li class="contacts-list-item">
+                <a href="mailto:info@example.com" class="contacts-footer"
+                  >info@example.com</a
+                >
+              </li>
+
+              <li class="contacts-list-item">
+                <a href="tel:+380991111111" class="contacts-footer"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-join-wrapper">
+          <p class="join-text">Присоединяйтесь</p>
+          <ul class="join-icons-list">
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
 
-            <li class="contacts-list-item">
-              <a href="tel:+380991111111" class="contacts-footer"
-                >+38 099 111 11 11</a
-              >
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="join-item">
+              <a href="" class="join-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
